src/MiniJava.g4
grammar MiniJava;

goal:   mainClass classDeclaration* EOF
    ;

mainClass
    :   'class' ID '{' 'public' 'static' 'void' 'main' '(' 'String' '['']' ID ')' '{' statement '}' '}' ;

classDeclaration
    :   'class' ID '{' varDeclaration* methodDeclaration* '}'
    |	'class' ID 'extends' ID '{' varDeclaration* methodDeclaration* '}'
    ;

varDeclaration
    :   type ID ';'
    ;

//methodDeclaration
//    :   ( 'public' type ID formalParameters
//        |          type ID formalParameters
//            {notifyErrorListeners("method declaration without public");}
//        | 'public'      ID formalParameters
//            {notifyErrorListeners("method declaration without return type");}
//        | 'public' type    formalParameters
//            {notifyErrorListeners("method declaration without method name");}
//        | 'public' type ID
//            {notifyErrorListeners("method declaration without argument list");}
//        )
//        methodBody
//    ;
//
//methodBody
//    :   '{'
//            varDeclaration*
//            statement+
//        '}'
//    ;
//
//formalParameters
//    :   '(' formalParameterList? ')'
//    ;
//
//formalParameterList
//    :   formalParameter (',' formalParameter)*
//    ;
//
//formalParameter
//    :   type ID
//    ;

methodDeclaration:	'public' type ID '(' formallist? ')' '{' varDeclaration* statement*  'return' expression ';' '}' ;

formallist:	type ID formalrest* ;

formalrest:	',' type ID ;

type
    :   intArrayType
    |   booleanType
    |   intType
    |   ID
    ;

statement
    :   '{' statement* '}'
    |   'if' '(' expression ')'
            statement
        'else'
            statement
    |   'while' '(' expression ')'
            statement
    |   'System.out.println' '(' expression ')' ';'
    |   ID '=' expression ';'
    |   ID '[' expression ']' '=' expression ';'
    |   'return' expression ';'
    |   'recur' expression '?' methodArgumentList ':' expression ';'
    ;

expression
    :   expression '[' expression ']'
    |   expression '.' 'length'
    |   expression '.' ID methodArgumentList
    |   '-' expression
    |   '!' expression
    |   'new' 'int' '[' expression ']'
    |   'new' ID '(' ')'
    |   expression '*'  expression
    |   expression '/'  expression
    |   expression '+'  expression
    |   expression '-'  expression
    |   expression '<'  expression
    |   expression '&&' expression
    |   INT
    |   BOOL
    |   ID
    |   'this'
    |   '(' expression ')'
    ;

methodArgumentList
    :   '(' (expression (',' expression)*)? ')'
    ;

intArrayType
    :   'int' '[' ']'
    ;

booleanType
    :   'boolean'
    ;

intType
    :   'int'
    ;

INT
    :   ('0' | [1-9][0-9]*)
    ;

BOOL
    :   'true'
    |   'false'
    ;

ID
    :   [a-zA-Z_][0-9a-zA-Z_]*
    ;

WS
    :   [ \r\t\n]+ -> skip
    ;

COMMENT
    : '/*' .*? '*/' -> skip
    ;

LINE_COMMENT
    : '//' ~[\r\n]* -> skip
    ;
